dh-make-perl (0.46) UNRELEASED; urgency=low

  * Replace "::" with "-" in $perlname in all cases, otherwise the URLs in
    debian/watch and debian/control's Homepage field are wrong.

 -- gregor herrmann <gregoa@debian.org>  Sun, 18 May 2008 16:12:47 +0200

dh-make-perl (0.45) unstable; urgency=low

  * Fix mangling of long description, which was broken in 0.44; thanks to
    Kevin Ryde for the bugreport (closes: #481560).
  * Tighten regexp when checking for empty long description, avoids spurious
    warnings.

 -- gregor herrmann <gregoa@debian.org>  Sat, 17 May 2008 15:09:59 +0200

dh-make-perl (0.44) unstable; urgency=low

  [ gregor herrmann ]
  * Fix check_for_xs(), thanks to Kevin Ryde for the bug report and the
    patch (closes: #480420).
  * Escape dot in exclude pattern, also reported by Kevin Ryde in the same
    bugreport.
  * CPAN.pm creates build directories with a random part since 1.88_59; use
    the new CPAN::Distribution::base_id method to get nice directory names
    again (introduced in 1.91_53), if our CPAN.pm is new enough.
  * Initialize $desc to avoid a warning.
  * Only mangle $longdesc if it is not empty, avoids results like " .".
  * If the directory containing the unpacked tarball already exists rename
    it instead of moving the contents beneath it.
  * Slightly improve wording when searching with apt-file.
  * Handle errors from moving directories.
  * Change my email address in several files.
  * debian/copyright: update years of contributions.

  [ Damyan Ivanov ]
  * Remove Roberto C. Sanchez from Uploaders on his request.

 -- gregor herrmann <gregoa@debian.org>  Sat, 10 May 2008 22:41:06 +0200

dh-make-perl (0.43) unstable; urgency=low

  [ gregor herrmann ]
  * Evaluate --arch command line option earlier.
  * Improve searching for dependencies with apt-file by using regexps; needs
    a recent version of apt-file.
  * Rank packages not ending in -perl lower in apt-file search results.